# autocomplete-rs

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  build.rs  clippy.toml  hk.pkl  mise.toml  rustfmt.toml
.claude/: settings.json  super-claude-config.json
.claude/commands/openspec/: archive.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/adr/: 0001-use-rust.md  0002-daemon-architecture.md  0003-build-time-spec-parsing.md  0004-direct-terminal-control.md  0005-ratatui-for-tui.md  README.md
docs/architecture/: daemon.md  overview.md  parser.md  tui.md
docs/development/: contributing.md  getting-started.md  project-structure.md  testing.md  tooling.md
docs/user-guide/: configuration.md  installation.md  troubleshooting.md
openspec/: AGENTS.md  ROADMAP.md  project.md
openspec/changes/add-fig-spec-parser/: proposal.md  tasks.md
openspec/changes/add-fig-spec-parser/specs/build-system/: spec.md
openspec/changes/add-fig-spec-parser/specs/spec-loader/: spec.md
openspec/changes/add-foundation-architecture/: proposal.md  tasks.md
openspec/changes/add-foundation-architecture/specs/daemon/: spec.md
openspec/changes/add-foundation-architecture/specs/shell-integration-zsh/: spec.md
openspec/changes/add-multi-shell-support/: proposal.md  tasks.md
openspec/changes/add-theme-support/: proposal.md  tasks.md
openspec/changes/implement-mvp-parser/: proposal.md  tasks.md
shell-integration/: zsh.zsh
src/: main.rs
src/daemon/: mod.rs
src/parser/: mod.rs
src/tui/: mod.rs
(+6 files in other folders)
