[package]
name = "autocomplete-rs"
version = "0.1.0"
authors = ["Jace Babin"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/jacebabin/autocomplete-rs"
keywords = ["autocomplete", "shell", "terminal", "completion", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jacebabin/autocomplete-rs"
description = "Fast, universal terminal autocomplete for all shells and terminals"

[[bin]]
name = "autocomplete-rs"
path = "src/main.rs"

[dependencies]
# TUI rendering
crossterm = "0.29"
ratatui = "0.29"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
rmp-serde = "1.1"                                  # MessagePack for efficient spec storage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
# For parsing TypeScript specs at build time (Phase 2)
# deno_ast = "0.40"  # TODO: Enable in Phase 2 when implementing spec parsing
anyhow = "1.0"
